--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,7 +53,7 @@ p {
           align-items: center;
   margin-bottom: 86px;
   height: 70px;
-  outline: 1px solid orange;
+  /* outline: 1px solid orange; */
 }
 .header .header-logo {
   width: 206px;
@@ -84,7 +84,7 @@ p {
 .column-left {
   width: 610px;
   /* min-height: 700px; */
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
 }
 .column-left .column-left__title {
   margin: 0;
@@ -128,7 +128,7 @@ p {
   padding-top: 14px;
   width: 610px;
   /* height: 600px; */
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
 }
 .column-right .column-right__form {
   position: relative;
@@ -202,6 +202,57 @@ p {
   text-align: left;
 }
 .features {
-  min-height: 1000px;
+  padding: 90px 10px 138px;
+  background: #fff;
+  color: #1a1820;
+}
+.features .features__title {
+  margin: 0;
+  font-size: 36px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 119px;
+}
+.features .features-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+.features-item {
+  width: 300px;
+  text-align: center;
+}
+.features-item:first-of-type {
+  margin-left: -15px;
+}
+.features-item:last-of-type {
+  margin-right: -7px;
+  margin-left: -7px;
+}
+.features-item .features-item__icon {
+  margin-bottom: 55px;
+}
+.features-item .features-item__title {
+  margin: 0;
+  margin-bottom: 29px;
+  font-size: 20px;
+  font-weight: bold;
+}
+.features-item .features-item__text {
+  font-size: 16px;
+  font-weight: 300;
+}
+.features-item .features-item__text .features-item__text-link {
+  text-decoration: none;
+  color: #4aa223;
+}
+.green {
+  min-height: 500px;
   background: lightgreen;
 }
