--- a/src/less/style.less
+++ b/src/less/style.less
@@ -63,7 +63,7 @@ p {
   align-items: center;
   margin-bottom: 86px;
   height: 70px;
-  outline: 1px solid orange;
+  /* outline: 1px solid orange; */
   .header-logo {
     width: 206px;
     height: 70px;
@@ -89,7 +89,7 @@ p {
 .column-left {
   width: 610px;
   /* min-height: 700px; */
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
   .column-left__title {
     margin: 0;
     margin-bottom: 29px;
@@ -130,7 +130,7 @@ p {
   padding-top: 14px;
   width: 610px;
   /* height: 600px; */
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
   .column-right__form {
     position: relative;
     display: flex;
@@ -200,7 +200,54 @@ p {
 }
 
 .features {
-  min-height: 1000px;
+  padding: 90px 10px 138px;
+  background: #fff;
+  color: #1a1820;
+  .features__title {
+    margin: 0;
+    font-size: 36px; 
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 119px;
+  }
+  .features-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items:baseline;
+  }
+}
+
+.features-item {
+  width: 300px;
+  text-align: center;
+  &:first-of-type {
+    margin-left: -15px;
+  }
+  &:last-of-type {
+    margin-right: -7px;
+    margin-left: -7px;
+  }
+  .features-item__icon {
+    margin-bottom: 55px;
+  }
+  .features-item__title {
+    margin: 0;
+    margin-bottom: 29px;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  .features-item__text {
+    font-size: 16px;
+    font-weight: 300;
+    .features-item__text-link {
+      text-decoration: none;
+      color: #4aa223;
+    }
+  }
+}
+
+.green {
+  min-height: 500px;
   background: lightgreen;
 }
 
