--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,6 +1,5 @@
 .styleBtn() {
-  width: 257px;
-  height: 65px;
+
   border: 1px solid #ffbb11;
   border-radius: 8px;
   background-image: linear-gradient( 360deg, rgb(245,173,0) 0%, rgb(255,181,4) 100%);
@@ -36,6 +35,13 @@ body {
   padding-left: 10px;
   padding-right: 10px;
   outline: 1px solid black;
+}
+
+.title-section {
+  margin: 0;
+  font-size: 36px; 
+  font-weight: bold;
+  text-align: center;
 }
 
 p {
@@ -189,6 +195,8 @@ p {
   }
 }
 
+/* Блок features */
+
 .features {
   display: flex;
   justify-content: space-between;
@@ -201,9 +209,6 @@ p {
     flex-basis: 100%;
     margin: 0;
     margin-bottom: 119px;
-    font-size: 36px; 
-    font-weight: bold;
-    text-align: center;
   }
 }
 
@@ -235,6 +240,108 @@ p {
     }
   }
 }
+
+/* Блок Price */
+
+.price {
+  min-height: 1000px;
+  background: url(../img/price-bg.jpg) repeat top left;
+  color: #fff;
+  text-align: center;
+}
+
+.price-heading {
+  position: relative;
+  margin-bottom: 88px;
+  .price-title {
+    padding-top: 111px;
+    padding-bottom: 39px;
+  }
+  .price-subtitle {
+    font-size: 18px;
+    word-spacing: 1px;
+  }
+  .price-heading-btn {
+    position: absolute;
+    top: 122px;
+    right: 0;
+    display: inline-block;
+    padding: 0px 23px 0px 32px;
+    font-size: 18px;
+    line-height: 63px;
+    text-align: center;
+    text-decoration: none;
+    letter-spacing: 0.3px;
+  }
+}
+
+.price-items-wrap {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+}
+.price-item {
+  /* display: flex; */
+  padding-top: 27px;
+  width: 400px;
+  min-height: 500px;
+  background: #fff;
+  color: #1a1820;
+  outline: 1px solid green;
+  .price-item__title {
+    font-size: 19px;
+    font-weight: bold;
+    margin-bottom: 32px;
+  }
+  .price-item__img {
+    margin-bottom: 25px;
+  }
+  .price-item__cost {
+    margin-bottom: 17px;
+    color: #1a1820;
+    font: bold 19px/32px "Proxima Nova", Arial, sans-serif;
+    text-align: center;
+    span {
+      font-size: 30px;
+      /* font-weight: bold; */
+    }
+  }
+  .price-item__list {
+    margin: 0;
+    padding: 0; 
+    font-size: 18px;
+    line-height: 30px;
+    list-style-type: none;
+    .price-item__list-item {
+      
+      &::before {
+        margin-left: -36px;
+        margin-top: 12px;
+        padding-left: 36px;
+        content: '';
+        width: 11px;
+        height: 9px;
+        background: url(../img/check-icon.png) no-repeat center;
+      }
+    }
+  }
+  .price-item__btn {
+    margin-top: 16px;
+    margin-bottom: 45px;
+    padding: 20px 59px 21px;
+    font: 18px "Proxima Nova Semibold", Arial, sans-serif; 
+  }
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
