--- a/src/less/style.less
+++ b/src/less/style.less
@@ -281,7 +281,10 @@ p {
   flex-flow: row wrap;
 }
 .price-item {
-  /* display: flex; */
+   display: flex; 
+   flex-flow: column nowrap;
+   justify-content: flex-start;
+   align-items: center;
   padding-top: 27px;
   width: 400px;
   min-height: 500px;
@@ -294,7 +297,7 @@ p {
     margin-bottom: 32px;
   }
   .price-item__img {
-    margin-bottom: 25px;
+    margin-bottom: 30px;
   }
   .price-item__cost {
     margin-bottom: 17px;
@@ -303,17 +306,17 @@ p {
     text-align: center;
     span {
       font-size: 30px;
-      /* font-weight: bold; */
     }
   }
   .price-item__list {
     margin: 0;
+    margin-bottom: 16px;
     padding: 0; 
     font-size: 18px;
     line-height: 30px;
     list-style-type: none;
     .price-item__list-item {
-      
+
       &::before {
         margin-left: -36px;
         margin-top: 12px;
@@ -326,7 +329,8 @@ p {
     }
   }
   .price-item__btn {
-    margin-top: 16px;
+    /* align-self: flex-end; */
+    margin-top: auto;
     margin-bottom: 45px;
     padding: 20px 59px 21px;
     font: 18px "Proxima Nova Semibold", Arial, sans-serif; 
